# winter

./: CMakeLists.txt  modern opengl.md
include/: gl_utils.h  glf_texture.h  index_buffer.h  renderer.h  shader.h  vertex_array.h
include/framework/: debug.h  index_buffer.h  renderer.h  shader.h  vertex_array.h  vertex_buffer.h
include/framework/base/: abstract_types.h  glf_texture.h  index_buffer.h  renderer.h  shader.h  shadow_map.h  texture.h  vertex_array.h  vertex_buffer.h
include/framework/light/: light.h  omni_shadow_map.h  shadow_map.h
include/framework/mesh/: material.h  mesh.h  model.h  skybox.h
include/framework/misc/: camera.h  debug.h  helper.h  light.h  window.h
include/framework/util/: camera.h  debug.h  window.h
include/outsource/stb_image/: stb_image.cpp
include/tests/: clearcolor.h  lighting.h  pyramid.h  test.h  texture.h
outsource/: used libraries.md
outsource/stb_image/: stb_image.h
res/shaders/: basic_fragment.glsl  basic_shader.glsl  basic_shader_lighting.glsl  basic_shader_notex.glsl
res/shaders/advanced/: lighting_frag.glsl  lighting_vertex.glsl
res/shaders/advanced/shadow/: directional.glsl  omni_frag.glsl  omni_geometry.glsl  omni_vertex.glsl
res/shaders/advanced/standard/: lighting_frag.glsl  lighting_vertex.glsl  skybox.glsl
res/shaders/basic/: basic_shader.glsl  basic_shader_lighting.glsl
src/: gl_utils.cpp  glf_texture.cpp  index_buffer.cpp  main.cpp  renderer.cpp  shader.cpp  vertex_array.cpp  vertex_buffer.cpp
src/framework/: debug.cpp  glf_texture.cpp  index_buffer.cpp  renderer.cpp  shader.cpp  vertex_array.cpp  vertex_buffer.cpp
src/framework/base/: glf_texture.cpp  index_buffer.cpp  renderer.cpp  shader.cpp  shadow_map.cpp  texture.cpp  vertex_array.cpp  vertex_buffer.cpp
src/framework/light/: light.cpp  omni_shadow_map.cpp  shadow_map.cpp
src/framework/mesh/: material.cpp  mesh.cpp  model.cpp  skybox.cpp
src/framework/misc/: camera.cpp  debug.cpp  light.cpp  window.cpp
src/framework/util/: camera.cpp  debug.cpp  gl_utils.cpp  window.cpp
src/tests/: clearcolor.cpp  lighting.cpp  pyramid.cpp  test.cpp  test_main.cpp  texture.cpp
